Bug 1753764 - Fold platform-specific rules into a shared searchbar.css r=dao
* The menuitem[cmd="cmd_clearhistory"] rules in the linux stylesheet were orphaned by 5d6c747a780c (Bug 1582639) and missed in clean-up.
* Alphabetize the shared manifest files entries.

Differential Revision: https://phabricator.services.mozilla.com/D139552

UltraBlame original commit: 711b10dbdc640849165b3470e7b8a12818a43377

--- a/browser/themes/shared/searchbar.css
+++ b/browser/themes/shared/searchbar.css
@@ -78,6 +78,12 @@
   border-radius: var(--toolbarbutton-border-radius);
 }
 
+@media (-moz-platform: windows) {
+  .searchbar-engine-one-off-item:focus-visible {
+    outline: none;
+  }
+}
+
 /* We don't handle `:active` because it doesn't work on the search or settings
    buttons due to event.preventDefault() in SearchOneOffs._on_mousedown(). */
 .searchbar-engine-one-off-item:not([selected]):hover {
@@ -155,4 +161,19 @@
   -moz-context-properties: fill, fill-opacity;
   fill: currentColor;
   fill-opacity: var(--urlbar-icon-fill-opacity);
+}
+
+@media (-moz-platform: windows-win10) {
+  #PopupSearchAutoComplete {
+    /* A border is necessary because the shadow is bottom-right */
+    border-color: var(--menu-border-color);
+    border-radius: var(--arrowpanel-border-radius);
+    -moz-window-shadow: cliprounded;
+  }
+}
+
+@media (-moz-platform: macos) {
+  #PopupSearchAutoComplete {
+    border-radius: 4px;
+  }
 }
