--- a/toolkit/themes/linux/global/checkbox.css
+++ b/toolkit/themes/linux/global/checkbox.css
@@ -12,6 +12,22 @@
 
 /* ::::: checkbox ::::: */
 
+checkbox:where([native]) {
+  appearance: auto;
+  -moz-default-appearance: checkbox-container;
+  -moz-box-align: center;
+  margin: 2px 4px;
+}
+
+.checkbox-label-box[native] {
+  appearance: auto;
+  -moz-default-appearance: checkbox-label;
+}
+
+.checkbox-label[native] {
+  margin: 0;
+}
+
 /* ..... focused state ..... */
 
 checkbox[native]:-moz-focusring > .checkbox-label-box {
