--- a/toolkit/themes/windows/global/checkbox.css
+++ b/toolkit/themes/windows/global/checkbox.css
@@ -12,6 +12,21 @@
 
 /* ::::: checkbox ::::: */
 
+checkbox:where([native]) {
+  appearance: auto;
+  -moz-default-appearance: checkbox-container;
+  -moz-box-align: center;
+  margin: 2px 4px;
+  padding-top: 1px;
+  padding-bottom: 1px;
+  padding-inline-start: 4px;
+  padding-inline-end: 2px;
+}
+
+.checkbox-label[native] {
+  margin: 0;
+}
+
 /* ..... focused state ..... */
 
 checkbox[native]:-moz-focusring > .checkbox-label-box {
