--- a/toolkit/themes/shared/tree.css
+++ b/toolkit/themes/shared/tree.css
@@ -35,14 +35,6 @@ treechildren::-moz-tree-row(multicol, odd) {
   background-color: -moz-oddtreerow;
 }
 
-%ifdef XP_WIN
-@media (-moz-windows-default-theme) {
-  treechildren::-moz-tree-row(hover) {
-    background-color: hsla(0,0%,50%,.15);
-  }
-}
-%endif
-
 treechildren::-moz-tree-row(selected) {
   background-color: -moz-cellhighlight;
 }
@@ -228,4 +220,88 @@ html|input.tree-input {
 .scrollbar-topmost {
   position: relative;
   z-index: 2147483647;
+}
+
+@media (-moz-platform: windows) {
+  @media (-moz-windows-default-theme) {
+    treechildren::-moz-tree-row(hover) {
+      background-color: hsla(0,0%,50%,.15);
+    }
+  }
+
+  /* ::::: sort direction indicator :::::  */
+
+  .treecol-sortdirection {
+    list-style-image: none;
+    -moz-context-properties: fill;
+    fill: currentColor;
+  }
+
+  treecol[sortDirection="ascending"]:not([hideheader="true"]) > .treecol-sortdirection {
+    list-style-image: url("chrome://global/skin/tree/sort-asc.svg");
+  }
+
+  treecol[sortDirection="descending"]:not([hideheader="true"]) > .treecol-sortdirection {
+    list-style-image: url("chrome://global/skin/tree/sort-dsc.svg");
+  }
+
+  @media (prefers-color-scheme: dark) {
+    treecol,
+    treecolpicker {
+      appearance: none;
+      background-color: ButtonFace;
+      color: ButtonText;
+      border-inline-start: 1px solid ThreeDLightShadow;
+      box-shadow: inset 0 -1px ThreeDLightShadow;
+    }
+    treecol:where([ordinal="1"]) {
+      border-inline-start: none;
+    }
+    :is(treecol, treecolpicker):where(:hover) {
+      background-color: -moz-ButtonHoverFace;
+      color: -moz-ButtonHoverText;
+    }
+    :is(treecol, treecolpicker):where(:hover:active) {
+      background-color: -moz-ButtonActiveFace;
+      color: -moz-ButtonActiveText;
+    }
+  }
+
+  @media (-moz-windows-classic) {
+    treecol,
+    treecolpicker {
+      border: 1px solid;
+      border-top-color: ThreeDHighlight;
+      border-inline-end-color: ThreeDShadow;
+      border-bottom-color: ThreeDShadow;
+      border-inline-start-color: ThreeDHighlight;
+      box-shadow: none;
+      background-color: -moz-Dialog;
+    }
+
+    :is(treecol, treecolpicker):where(:hover:active) {
+      border-top-color: ThreeDShadow;
+      border-inline-end-color: ThreeDHighlight;
+      border-bottom-color: ThreeDHighlight;
+      border-inline-start-color: ThreeDShadow;
+    }
+  }
+}
+
+@media (-moz-platform: macos) and (not (prefers-contrast)) {
+    /* We show a `SelectedItem` background on selected rows, so we do not need the
+       dotted outline in that case. For users who have Full Keyboard Access
+       enabled, macOS draws a blue highlight above the row highlight, so keyboard-
+       only users can still discern the currently-selected row when multiple rows
+       are selected. */
+  treechildren::-moz-tree-row(selected, current, focus) {
+    outline: none;
+  }
+}
+
+@media (-moz-platform: linux) {
+  .treecol-sortdirection {
+    appearance: auto;
+    -moz-default-appearance: treeheadersortarrow;
+  }
 }
