Bug 1756717 - use sans-serif font for pip captions/subtitles r=pip-reviewers,mhowell
Updated Picture in Picture text tracks stylesheet to use sans-serif font. Specific font-family is determined by sans-serif setting in about:preferences.

Differential Revision: https://phabricator.services.mozilla.com/D139736

UltraBlame original commit: 55f9d5abcddd10d3f86345bbc680fd45447f07c2

--- a/toolkit/themes/shared/pictureinpicture/texttracks.css
+++ b/toolkit/themes/shared/pictureinpicture/texttracks.css
@@ -25,6 +25,7 @@
     line-height: clamp(14.4px, calc(0.08 * 100vh), 57.6px);
     white-space: pre-line;
     width: max-content;
+    font-family: sans-serif;
  }
 
  #texttracks:empty {
