Bug 1753757 - Eliminate preprocessor %includes from Downloads stylesheets r=dao
- Replaced preprocessor includes with css imports.
- Removed preprocessor conditionals from allDownloadsView.inc.css.

Differential Revision: https://phabricator.services.mozilla.com/D139404

UltraBlame original commit: b547c1a2ef613e4647a123d651ac2b6c6736cfcd

--- a/browser/themes/shared/downloads/downloads.inc.css
+++ b/browser/themes/shared/downloads/downloads.inc.css
@@ -2,6 +2,9 @@
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at http://mozilla.org/MPL/2.0/. */
 
+@import "chrome://browser/skin/downloads/progressmeter.css";
+@import "chrome://browser/skin/downloads/download-blockedStates.css";
+
 /*** Panel and outer controls ***/
 
 #downloadsListBox {
@@ -259,9 +262,3 @@
 #downloadsFooterButtons > toolbarseparator {
   margin-inline: 0;
 }
-
-/*** Progressmeter ***/
-%include progressmeter.inc.css
-
-/*** Blocked iconography ***/
-%include download-blockedStates.inc.css
