--- a/browser/themes/windows/downloads/downloads.css
+++ b/browser/themes/windows/downloads/downloads.css
@@ -2,7 +2,7 @@
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at http://mozilla.org/MPL/2.0/. */
 
-%include ../../shared/downloads/downloads.inc.css
+@import "chrome://browser/skin/downloads/downloads.inc.css";
 
 /*** Panel and outer controls ***/
 
