--- a/toolkit/themes/shared/media/videocontrols.css
+++ b/toolkit/themes/shared/media/videocontrols.css
@@ -428,12 +428,12 @@
   font-variant-numeric: tabular-nums;
 }
 
-%ifdef XP_MACOSX
-.positionDurationBox {
-  font-size-adjust: unset;
-  font-family: "Helvetica Neue", "Helvetica", sans-serif;
+@media (-moz-platform: macos) {
+  .positionDurationBox {
+    font-size-adjust: unset;
+    font-family: "Helvetica Neue", "Helvetica", sans-serif;
+  }
 }
-%endif
 
 .duration {
   display: inline-block;
@@ -603,14 +603,12 @@
   display: inline;
 }
 
-%ifdef XP_WIN
-@media (-moz-windows-default-theme: 0) {
+@media (-moz-platform: windows) and (-moz-windows-default-theme: 0) {
   .controlsSpacer,
   .clickToPlay {
     background-color: transparent;
   }
 }
-%endif
 
 .pip-wrapper {
   position: absolute;
