--- a/browser/themes/shared/downloads/downloads.inc.css
+++ b/browser/themes/shared/downloads/downloads.inc.css
@@ -52,17 +52,24 @@
 #downloadsListBox > richlistitem.openWhenFinished.hoveringMainArea:hover,
 #downloadsListBox > richlistitem[verdict]:hover,
 #downloadsListBox > richlistitem.openWhenFinished:hover,
-.downloadsPanelFooterButton:hover,
-#downloadsPanel[keyfocus] #downloadsListBox:focus > richlistitem[selected],
-#downloadsHistory:focus {
+.downloadsPanelFooterButton:hover {
   background-color: var(--panel-item-hover-bgcolor);
 }
 
 #downloadsListBox > richlistitem[state="1"][exists].hoveringMainArea:hover:active,
 #downloadsListBox > richlistitem.openWhenFinished.hoveringMainArea:hover:active,
-.downloadsPanelFooterButton[open="true"],
-#downloadsListBox > richlistitem[verdict]:hover:active {
+#downloadsListBox > richlistitem[verdict]:hover:active,
+.downloadsPanelFooterButton[open="true"] {
   background-color: var(--panel-item-active-bgcolor);
+}
+
+#downloadsListBox:focus-visible > richlistitem[selected],
+#downloadsListBox[force-focus-visible]:focus > richlistitem[selected],
+.downloadButton:focus-visible,
+#downloadsSummary:focus-visible,
+.downloadsPanelFooterButton:focus-visible {
+  outline: var(--focus-outline);
+  outline-offset: calc(var(--focus-outline-width) * -1);
 }
 
 #downloadsListBox > richlistitem[verdict="Insecure"] .downloadDetails,
@@ -87,18 +94,11 @@
   margin-top: 1.5em;
 }
 
-#downloadsPanel:not([keyfocus]) .downloadsPanelFooterButton:-moz-focusring {
-  outline: none;
-}
-
 #downloadsSummary {
   background: var(--arrowpanel-dimmed);
   border-top: 1px solid var(--panel-separator-color);
   /* Reserve the same space as the button and separator in download items. */
   padding-inline-end: 59px;
-}
-
-#downloadsSummary {
   -moz-user-focus: normal;
 }
 
