--- a/toolkit/themes/shared/checkbox.css
+++ b/toolkit/themes/shared/checkbox.css
@@ -88,3 +88,126 @@ checkbox:not([native]):focus-visible > .checkbox-check {
     background-color: var(--checkbox-checked-bgcolor, -moz-accent-color);
   }
 }
+
+/* ..... Platform overrides ..... */
+
+@media (-moz-platform: windows) {
+  checkbox:where([native]) {
+    appearance: auto;
+    -moz-default-appearance: checkbox-container;
+    -moz-box-align: center;
+    margin: 2px 4px;
+    padding-top: 1px;
+    padding-bottom: 1px;
+    padding-inline-start: 4px;
+    padding-inline-end: 2px;
+  }
+
+  .checkbox-label[native] {
+    margin: 0;
+  }
+
+  /* ..... focused state ..... */
+
+  checkbox[native]:-moz-focusring > .checkbox-label-box {
+    outline: var(--default-focusring);
+  }
+
+  /* ..... disabled state ..... */
+
+  checkbox[native][disabled="true"] {
+    color: GrayText;
+  }
+
+  @media (-moz-windows-classic) {
+    checkbox[native][disabled="true"] {
+      color: ThreeDShadow;
+      text-shadow: 1px 1px ThreeDHighlight;
+    }
+  }
+
+  /* ::::: checkmark image ::::: */
+
+  .checkbox-check[native] {
+    appearance: auto;
+    -moz-default-appearance: checkbox;
+    -moz-box-align: center;
+    min-width: 13px;
+    min-height: 13px;
+    margin-inline-end: 5px;
+  }
+}
+
+@media (-moz-platform: macos) {
+  checkbox:where([native]) {
+    appearance: auto;
+    -moz-default-appearance: checkbox-container;
+    -moz-box-align: center;
+    margin: 4px 2px;
+  }
+
+  .checkbox-label[native] {
+    margin: 1px 0;
+  }
+
+  /* ..... disabled state ..... */
+
+  checkbox[native][disabled="true"] {
+    color: GrayText;
+  }
+
+  /* ::::: checkmark image ::::: */
+
+  .checkbox-check[native] {
+    appearance: auto;
+    -moz-default-appearance: checkbox;
+    margin-block: 1px 0;
+    margin-inline: 1px 3px;
+    /* vertical-align tells native theming where to snap to. However, this doesn't
+     * always work reliably because of bug 503833. */
+    vertical-align: top;
+    width: 1.3em;
+    height: 1.3em;
+  }
+}
+
+@media (-moz-platform: linux) {
+  checkbox:where([native]) {
+    appearance: auto;
+    -moz-default-appearance: checkbox-container;
+    -moz-box-align: center;
+    margin: 2px 4px;
+  }
+
+  .checkbox-label-box[native] {
+    appearance: auto;
+    -moz-default-appearance: checkbox-label;
+  }
+
+  .checkbox-label[native] {
+    margin: 0;
+  }
+
+  /* ..... focused state ..... */
+
+  checkbox[native]:-moz-focusring > .checkbox-label-box {
+    /* Native theming should take care of this but it appears to be broken with
+       some Gtk themes. Bug 1312169. */
+    outline: var(--default-focusring);
+  }
+
+  /* ..... disabled state ..... */
+
+  checkbox[native][disabled="true"] {
+    color: GrayText;
+  }
+
+  /* ::::: checkmark image ::::: */
+
+  .checkbox-check[native] {
+    appearance: auto;
+    -moz-default-appearance: checkbox;
+    margin: 2px;
+    margin-inline-end: 4px;
+  }
+}
