Bug 1757572 - Remove --toolbarbutton-focus-outline which at this point is just an alias for --focus-outline. r=Itiel
Differential Revision: https://phabricator.services.mozilla.com/D139945

UltraBlame original commit: 91956f62a123375565ab58f96f50b6245dd381b8

--- a/browser/themes/shared/notification-icons.inc.css
+++ b/browser/themes/shared/notification-icons.inc.css
@@ -24,10 +24,10 @@
   fill: currentColor;
 }
 
-.blocked-permission-icon:-moz-focusring,
-.notification-anchor-icon:-moz-focusring {
-  outline: var(--toolbarbutton-focus-outline);
-  outline-offset: calc(var(--urlbar-icon-padding) - 2px);
+.blocked-permission-icon:focus-visible,
+.notification-anchor-icon:focus-visible {
+  outline: var(--focus-outline);
+  outline-offset: calc(var(--urlbar-icon-padding) - var(--focus-outline-width));
 }
 
 /* This class can be used alone or in combination with the class defining the
