--- a/browser/themes/shared/identity-block/identity-block.inc.css
+++ b/browser/themes/shared/identity-block/identity-block.inc.css
@@ -43,10 +43,10 @@
   color: var(--urlbar-box-hover-text-color);
 }
 
-.identity-box-button:not(:active):-moz-focusring,
-#tracking-protection-icon-container:not(:active):-moz-focusring {
-  outline: var(--toolbarbutton-focus-outline);
-  outline-offset: -2px;
+.identity-box-button:not(:active):focus-visible,
+#tracking-protection-icon-container:not(:active):focus-visible {
+  outline: var(--focus-outline);
+  outline-offset: calc(-1 * var(--focus-outline-width));
 }
 
 .identity-box-button {
