Backed out changeset d6a3e5603500 (bug 1756495) for causing xpcshell failures on test_ext_contentscript_dynamic_registration.js CLOSED TREE
UltraBlame original commit: ea599084e68e0aefd2b889d2cb0dc07db2d7dc89

--- a/toolkit/components/extensions/test/mochitest/test_ext_scripting_contentScripts.html
+++ b/toolkit/components/extensions/test/mochitest/test_ext_scripting_contentScripts.html
@@ -782,16 +782,11 @@ add_task(async function test_getRegisteredContentScripts_during_a_registration()
       ]);
 
       const scripts = await browser.scripting.getRegisteredContentScripts();
+      // This test covers the case where `options` is `undefined` in the
+      // `getRegisteredContentScripts()` implementation because we call this
+      // method during a registration that is not yet complete.
       browser.test.assertEq(
-        JSON.stringify([
-          {
-            id: "a-script",
-            allFrames: false,
-            js: ["script.js"],
-            matches: ["*://test1.example.com/*"],
-            runAt: "document_idle",
-          },
-        ]),
+        "[]",
         JSON.stringify(scripts),
         "expected empty result array"
       );
