--- a/browser/components/preferences/privacy.inc.xhtml
+++ b/browser/components/preferences/privacy.inc.xhtml
@@ -656,7 +656,7 @@
               data-l10n-id="addressbar-firefox-suggest-best-match-option"
               preference="browser.urlbar.suggest.bestmatch"/>
     <label id="firefoxSuggestBestMatchLearnMore"
-           class="learnMore"
+           class="learnMore wants-telemetry"
            is="text-link"
            data-l10n-id="addressbar-best-match-learn-more"/>
   </hbox>
