--- a/browser/themes/shared/customizableui/panelUI.inc.css
+++ b/browser/themes/shared/customizableui/panelUI.inc.css
@@ -673,14 +673,17 @@ toolbarbutton[constrain-size="true"][cui-areatype="menu-panel"] > .toolbarbutton
 
 .PanelUI-fxa-service-description-label,
 .PanelUI-remotetabs-instruction-label {
-  /* Use 'lighter' font for this to de-emphasize it compared to the title.
-   * We use 300 on Linux because 100 is too light (lacks contrast with
-   * the background) for some fonts in combination with anti-aliasing. */
-%if defined(XP_MACOSX) || defined(XP_WIN)
+  /* Use 'lighter' font for this to de-emphasize it compared to the title. */
   font-weight: lighter;
-%else
-  font-weight: 300;
-%endif
+}
+
+@media (-moz-platform: linux) {
+  .PanelUI-fxa-service-description-label,
+  .PanelUI-remotetabs-instruction-label {
+    /* Use 300 on Linux because 100 is too light (lacks contrast with
+     * the background) for some fonts in combination with anti-aliasing. */
+    font-weight: 300;
+  }
 }
 
 #fxa-menu-header-title {
