Bug 1757955 - Implement --focus-outline-inset variable. r=Itiel
Differential Revision: https://phabricator.services.mozilla.com/D140210

UltraBlame original commit: 872ee7280be0eac6bcbbe4d4aed5a2b9da445cbc

--- a/browser/themes/shared/customizableui/panelUI.inc.css
+++ b/browser/themes/shared/customizableui/panelUI.inc.css
@@ -1229,7 +1229,7 @@ panelview .toolbarbutton-1 {
   panelview .toolbaritem-combined-buttons > toolbarbutton
 ):focus-visible {
   outline: var(--focus-outline);
-  outline-offset: calc(var(--focus-outline-width) * -1);
+  outline-offset: var(--focus-outline-inset);
 }
 
 /* hover styles for not-disabled, not-active buttons */
