Backed out changeset ef3284274d47 (bug 1754263) for cauisng failures at browser_parsable_css.js.
UltraBlame original commit: 8d7b06928b4422c83096e7a3412448bd7974b7a2

--- a/toolkit/themes/windows/global/menu.css
+++ b/toolkit/themes/windows/global/menu.css
@@ -2,8 +2,6 @@
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at http://mozilla.org/MPL/2.0/. */
 
-@import url("chrome://global/skin/menu-scrolling.css");
-
 /* ===== menu.css =======================================================
   == Styles used by XUL menu-related elements.
   ======================================================================= */
@@ -412,3 +410,5 @@ menuseparator {
     margin: 2px 1em;
   }
 }
+
+%include ../../shared/menu-scrolling.inc.css
