Bug 1736584 - Part 2: re-add a test case. r=robwu
Depends on D138819

Differential Revision: https://phabricator.services.mozilla.com/D140316

UltraBlame original commit: 2289c84e377db4e6e38d4a6357bb2cb5148d4ae4

--- a/toolkit/components/extensions/test/mochitest/test_ext_scripting_contentScripts.html
+++ b/toolkit/components/extensions/test/mochitest/test_ext_scripting_contentScripts.html
@@ -770,6 +770,44 @@ add_task(async function test_registerContentScripts_twice_with_same_id() {
   await extension.unload();
 });
 
+add_task(async function test_getRegisteredContentScripts_during_a_registration() {
+  let extension = makeExtension({
+    async background() {
+      browser.scripting.registerContentScripts([
+        {
+          id: "a-script",
+          js: ["script.js"],
+          matches: ["*://test1.example.com/*"],
+        },
+      ]);
+
+      const scripts = await browser.scripting.getRegisteredContentScripts();
+      browser.test.assertEq(
+        JSON.stringify([
+          {
+            id: "a-script",
+            allFrames: false,
+            js: ["script.js"],
+            matches: ["*://test1.example.com/*"],
+            runAt: "document_idle",
+          },
+        ]),
+        JSON.stringify(scripts),
+        "expected empty result array"
+      );
+
+      browser.test.sendMessage("background-done");
+    },
+    files: {
+      "script.js": "",
+    },
+  });
+
+  await extension.startup();
+  await extension.awaitMessage("background-done");
+  await extension.unload();
+});
+
 add_task(async function test_validate_unregisterContentScripts_params() {
   let extension = makeExtension({
     async background() {
